surefiel version property added preview profile